--- a/playbook.yml
+++ b/playbook.yml
@@ -2,6 +2,7 @@
 
 # clone update golang repo
 # install my ssh keys
+# 
 
 roles:
   - geerlingguy.java #
@@ -14,3 +15,4 @@ roles:
   - fubarhouse.rust #
   - protobuf
   - protobuf-go
+  - terraform
