--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,5 @@
 - hosts: all
 
-
 # TODO: clone update golang repo
 # TODO: install my ssh keys
 # TODO: clone configs repository
@@ -19,11 +18,29 @@ roles:
   - terraform
 
 tasks:
-- name: Create directories
-  file:
-    path: "/home/yannic/{{ item }}"
-    state: directory    
-    owner: yannic
-    group: yannic
-  with_items:
-    - ["go", "java", "rust", "cpp", "volix", "rewinside", "misc"]
+  - name: Create directories
+    file:
+      path: "/home/yannic/{{ item }}"
+      state: directory    
+      owner: yannic
+      group: yannic
+    with_items:
+      - ["go", "java", "rust", "cpp", "volix", "rewinside", "misc"]
+  
+  - name: Download SSH keys
+    get_url:
+      url: /some/url/{{ item }}
+      dest: "/home/yannic/.ssh/{{ item }}"
+    with_items:
+      - [""] # TODO: private SSH keys
+      - [""] # TODO: public SSH keys
+
+  - name: Clone Update Golang repository
+    git:
+      repo: https://github.com/udhos/update-golang.git
+      dest: /home/yannic/misc/update-golang
+
+  - name: Clone repository containing personal configs
+    git:
+      repo: git@github.com:Freggy/configs.git
+      dest: /home/yannic/misc/configs
