--- a/playbook.yml
+++ b/playbook.yml
@@ -1,24 +1,14 @@
 - hosts: localhost
-
+  become: yes
 # TODO: install my ssh keys
   pre_tasks:
-  - name: Backup /etc/lsb-release file
-    shell: mv /etc/lsb-release /etc/lsb-release.orig
-  - name: Copy new /etc/lsb-release file
-    copy:
-       src: config/lsb-release
-       dest: /etc/lsb-release
-  - name: Backup /usr/lib/os-release
-    shell: cp /usr/lib/os-release /usr/lib/os-release.orig
-  - name: Copy new /usr/lib/os-release file
-    copy:
-      src: config/os-release
-      dest: /usr/lib/os-release
+    - name: Include LinuxMint pre tasks
+      include_tasks: setup-pre-tasks-mint.yml
+      when: ansible_distribution == "LinuxMint"
   post_tasks:
-  - name: Restore /etc/lsb-release
-    shell: mv /etc/lsb-release.orig /etc/lsb-release
-  - name: Restore /usr/lib/os-release
-    shell: mv /usr/lib/os-release.orig /usr/lib/os-release
+    - name: Include LinuxMint post tasks
+      include_tasks: setup-post-tasks-mint.yml
+      when: ansible_distribution == "LinuxMint"
 
   vars_files:
   - vars/common.yml
