--- a/playbook.yml
+++ b/playbook.yml
@@ -8,7 +8,7 @@
   post_tasks:
     - name: Include LinuxMint post tasks
       include_tasks: tasks/setup-post-tasks-mint.yml
-      when: ansible_distribution == "LinuxMint"
+      when: ansible_distribution == "Ubuntu"
 
   vars_files:
   - vars/common.yml
