--- a/roles/golang/tasks/main.yml
+++ b/roles/golang/tasks/main.yml
@@ -3,11 +3,11 @@
     url: "https://dl.google.com/go/go{{ go_version }}.linux-{{ GOARCH }}.tar.gz"
     dest: /tmp/
 - name: Untar Golang
-  shell: "tar -C /usr/local -xzf /tmp/go{{ go_version }}.linux-{{ GOARCH }}.tar.gz"
+  shell: "tar -C {{ go_install_folder }} -xzf /tmp/go{{ go_version }}.linux-{{ GOARCH }}.tar.gz"
 - name: "Create /etc/profile.d/{{ user_name }}.sh"
   shell: "touch /etc/profile.d/{{ user_name }}.sh"
 - name: Add to $HOME/.profile
-  shell: "echo 'PATH=$PATH:/usr/local/go/bin' >> /etc/profile.d/{{ user_name }}.sh"
+  shell: "echo 'PATH=$PATH:{{ go_install_folder }}/go/bin' >> /etc/profile.d/{{ user_name }}.sh"
 - name: Export GOARCH
   shell: "echo 'export GOARCH={{ GOARCH }}' >> /etc/profile.d/{{ user_name }}.sh"
 - name: Export GOOS
